fix: footer font sizes and spacing

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,6 @@
 @use '../../styles/mixins.module' as localMixins;
 
 .root {
-  background-color: rgba(0, 0, 0, 0);
   padding: 3.25rem 1.5rem 1.75rem;
   position: relative;
 }
@@ -25,6 +24,10 @@
   margin: 0;
   margin-right: 2.5rem;
 
+  &.copyright {
+    font-size: 20px;
+  }
+
   @include localMixins.media(mobile) {
     margin-right: 0;
   }
@@ -33,10 +36,10 @@
 .link {
   color: colors.getColor(copy-light);
   display: block; 
+  font-size: 14px;
 }
 
 .linkItem {
-  margin-right: 1.75rem;
   &:last-child {
     margin-right: 0;
   }
@@ -49,6 +52,7 @@
   display: flex;
   padding: 0;
   margin: 0;
+  gap: 4rem;
 }
 
 .row {
